# minimal-template

./: README.md  env.yml  pyproject.toml
minimal_template/: __init__.py
tests/: test_with_pytest.py
